# qwebrtc

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  media_constraints.cc  qwebrtc.cpp  qwebrtc.h  qwebrtc_global.h  rtcaudiobuffer.cpp  rtcaudiobuffer.h  rtcaudiocustomprocessingdelegate.cpp  rtcaudiocustomprocessingdelegate.h  rtcaudiorenderer.h  rtcaudiosource.cpp  rtcaudiosource.h  rtcaudiosource_p.h  rtccertificate.cpp  rtccertificate.h  rtccodecspecificinfo.cpp  rtccodecspecificinfo.h  rtccodecspecificinfoh264.cpp  rtccodecspecificinfoh264.h  rtcconfiguration.h  rtccvpixelbuffer.h  rtcdatabuffer.cpp  rtcdatachannel.cpp  rtcdatachannel.h  rtcdefaultvideodecoderfactory.cpp  rtcdefaultvideodecoderfactory.h  rtcdefaultvideoencoderfactory.cpp  rtcdefaultvideoencoderfactory.h  rtcdesktopcapturer.cpp  rtcdesktopmedialist.h  rtcdesktopsource.cpp  rtcdesktopsource.h  rtcdtmfsender.cpp  (+79 more)
.github/: FUNDING.yml
scripts/: clang-format-all.sh
src/: CMakeLists.txt  qwebrtc.cpp  qwebrtc.h  qwebrtcglobal.h  rtcaudiobuffer.cpp  rtcaudiobuffer.h  rtcaudiobuffer_p.h  rtcaudiocustomprocessingadapter.cpp  rtcaudiocustomprocessingadapter.h  rtcaudiocustomprocessingadapter_p.h  rtcaudiocustomprocessingdelegate.cpp  rtcaudiocustomprocessingdelegate.h  rtcaudiodevice.h  rtcaudiodevicemodule.cpp  rtcaudiodevicemodule.h  rtcaudiodevicemodule_p.h  rtcaudioprocessingconfig.cpp  rtcaudioprocessingconfig.h  rtcaudioprocessingconfig_p.h  rtcaudioprocessingmodule.cpp  rtcaudioprocessingmodule.h  rtcaudiorenderer.cpp  rtcaudiorenderer.h  rtcaudiosource.cpp  rtcaudiosource.h  rtcaudiosource_p.h  rtcaudiotrack.cpp  rtcaudiotrack.h  rtcaudiotrack_p.h  rtccertificate.cpp  rtccertificate.h  rtccodecspecificinfo.cpp  rtccodecspecificinfo.h  rtccodecspecificinfoh264.cpp  rtccodecspecificinfoh264.h  rtccodecspecificinfoh264_p.h  rtcconfiguration.cpp  rtcconfiguration.h  rtcconfiguration_p.h  rtccryptooptions.cpp  (+224 more)
src/native/: .clang-format  cdesktopcapture.cpp  cdesktopcapture.h  cdesktopmedialist.cpp  cdesktopmedialist.h  cframebuffer.cpp  cframebuffer.h  cnetworkmonitorfactory.cpp  cnetworkmonitorfactory.h  csslcertificateverifieradapter.cpp  csslcertificateverifieradapter.h  cvideodecoderfactory.cpp  cvideodecoderfactory.h  cvideoencoderfactory.cpp  cvideoencoderfactory.h  cvideoframe.cpp  cvideoframe.h  cvideoframebuffer.cpp  cvideoframebuffer.h  cvideorenderer.cpp  cvideorenderer.h  cvideotracksource.cpp  cvideotracksource.h  network_monitor_factory.cpp  objc_audio_device_module.cpp  objc_audio_device_module.h  objc_desktop_capture.cpp  objc_desktop_media_list.cpp  objc_desktop_media_list.h  objc_frame_buffer.cpp  objc_frame_buffer.h  objc_network_monitor.h  objc_video_decoder_factory.cpp  objc_video_decoder_factory.h  objc_video_encoder_factory.cpp  objc_video_encoder_factory.h  objc_video_frame.cpp  objc_video_frame.h  objc_video_renderer.cpp  objc_video_renderer.h  (+4 more)
src/native/darwin/: audio_device_module.mm  objc_audio_device.h  objc_audio_device.mm  objc_audio_device_delegate.h  objc_audio_device_delegate.mm
